--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "bootstrap": "^5.3.1",
     "formik": "^2.4.5",
     "generate-react-cli": "^8.3.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
